--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-express",
+  "name": "merit-express-netlify",
   "version": "0.0.1",
   "description": "Example of how to deploy a Express.js Netlify app.",
   "main": "functions/server.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
+    "url": "git+https://github.com/buckldav/merit-express-netlify.git"
   },
   "keywords": [
     "netlify",
@@ -18,9 +18,9 @@
   "author": "neverendingqs",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
+    "url": "https://github.com/buckldav/merit-express-netlify/issues"
   },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
+  "homepage": "https://github.com/buckldav/merit-express-netlify#readme",
   "dependencies": {
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.1",
